--- a/style.css
+++ b/style.css
@@ -127,3 +127,4 @@ footer {
     #primary { width:100%; }
     #secondary { width:100%; margin:0; border:none; }
 }
+img { max-width: 100%; height: auto; }
