--- a/style.css
+++ b/style.css
@@ -124,7 +124,15 @@ footer {
 
 /* Media Queries: Tabled Portrait */
 @media screen and (max-width: 768px) {
-    #primary { width:100%; }
-    #secondary { width:100%; margin:0; border:none; }
+    #primary { 
+	    width:100%;
+	}
+    #secondary { 
+	    width:100%; 
+	    margin:0;
+	    border:none; }
 }
-img { max-width: 100%; height: auto; }
+img { 
+max-width: 100%;
+height: auto; 
+}
