--- a/bert.css
+++ b/bert.css
@@ -18,8 +18,7 @@ body{
 width:110%;
 }
 @media only screen and (max-device-width: 480px) {
-
-  body{
+body{
     width:145%;
   }
 	h1{
@@ -36,3 +35,17 @@ footer{
   bottom:-820px;
 
     }
+}
+ @media only screen and (min-device-width:900px ) and (max-device-width:1100px) {
+  body{
+    width:145%;
+  }
+  h1{
+    text-align:center;
+  }
+.center{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width:auto;
+}
