--- a/style.css
+++ b/style.css
@@ -117,3 +117,11 @@ footer {
 .c{
   text-align:center;
 }
+.c{
+  text-align:center;
+}
+.p{
+  text-align: center;
+}
+.pa{
+    text-align: center;}
